--- a/single.html
+++ b/single.html
@@ -9,6 +9,8 @@
     <meta content="Free HTML Templates" name="description">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
+    <!--Lenis CDN for smooth scrolling-->
+    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -33,6 +35,22 @@
 </head>
 
 <body>
+    <!--Lenis for Smooth Scrolling-->
+    <script>
+        const lenis = new Lenis({
+          duration: 1.2,
+          easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+          smooth: true,
+        })
+    
+        function raf(time) {
+          lenis.raf(time)
+          requestAnimationFrame(raf)
+        }
+    
+        requestAnimationFrame(raf)
+      </script>
+
     <!-- Navbar Start -->
     <div class="container-fluid bg-light position-relative shadow">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
